--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 *{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}.d-flex.space-around{
+  justify-content: space-around;
 }
 :root{
   --primary: #abce5c;
@@ -28,16 +32,6 @@ body{
 
 header{
   height: 80px;
-}
-main{
-  min-height: calc(100vh - (120px + 80px));
-}
-#welcome{
-  min-height: calc(95vh - (120px + 80px));
-  /* @media (max-width: 600px) {
-    align-items: center;
-    padding: 1em;
-  } */
 }
 
 footer{
@@ -94,6 +88,10 @@ button:hover{
   background-color: var(--primary-lighten);
 }
 
+button.petcatnip{
+  margin: 15px 10px 0px 10px;
+}
+
 button.danger{
   background-color: var(--danger);
 }
@@ -142,15 +140,17 @@ button.btn-special:hover{
 
 .bar {
   height: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .notification {
   background-color: var(--danger);
   color: var(--light);
   text-align: left;
-  padding: 10px;
-  transform: translateX(75%);
   transition: opacity .3s;
+  min-width: 290px;
   @media (max-width: 600px) {
     transform: translateX(0%);
   }
@@ -161,27 +161,32 @@ button.btn-special:hover{
   opacity: 0;
 }
 
-.container{
-  margin: 0 -3em;
-}
-
 .card{
   background-color: var(--light);
-  padding: 1em;
+  padding: 3em;
   font-size: medium;
   text-align: center;
   box-shadow: var(--shadow);
   border-radius: var(--corners);
-  margin-bottom: 30px;
+  margin-bottom: 15px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 600px;
 }
 
 .card.forkittens {
-  width: 200px;
-  height: 280px;
+  flex-basis: 200px;
+  height: 300px;
+  margin: 1em;
+  padding: 2em;
 }
 
 .shadow{
   filter: drop-shadow(var(--shadow));
+}
+
+.moody {
+  padding: 0 0 0 10px;
 }
 
 
@@ -244,6 +249,11 @@ button.btn-special:hover{
   display: flex;
   align-items: center;
 }
+
+.flex-column {
+  flex-direction: column;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
 }
@@ -252,6 +262,9 @@ button.btn-special:hover{
 }
 .d-flex.space-around{
   justify-content: space-around;
+}
+.d-flex.space-evenly{
+  justify-content: space-evenly;
 }
 .d-flex.justify-content-center{
   justify-content: center;
@@ -326,15 +339,6 @@ button.btn-special:hover{
   padding-left: 3em;
 }
 
-.w-50{
-  width: 50%;
-  margin-left: 25%;
-  text-align: center;
-  /* @media (max-width: 600px) {
-    width: 100%; */
-  }
-}
-
 .text-center{
   text-align: center;
 }
@@ -352,6 +356,45 @@ button.btn-special:hover{
   filter: brightness(1);
 }
 
+#kittens {
+  align-content: center;
+  min-height: 70vh;
+  overflow-x: clip;
+}
+
+.kitten-info {
+  width: 105%;
+}
+
 .hidden{
   display: none !important;
+}
+
+@media (max-width: 600px) {
+  #kittens {
+    display: block;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 30px;
+    min-height: 70vh;
+    overflow-x: clip;
+  }
+
+  .button-reset{
+    justify-content: center;
+   }
+
+   button.petcatnip{
+    margin: 15px 30px 0px 30px;
+  }
+
+  .card {
+    flex-basis: 85%;
+  }
+}
+
+@media (min-width: 601px) {
+  .button-reset{
+    justify-content: space-between;
+   }
 }
